# rust-ink-build

./: .rustfmt.toml  Cargo.toml  config.json  package-lock.json  package.json
contracts/admin/: Cargo.toml  lib.rs
