[package]
name = "admin"
version = "0.0.1"
authors = ["Scio Labs <hello@scio.xyz>"]
edition = "2021"

[dependencies]
ink = { version = "4.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "4.2" }

[lib]
name = "admin"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
